--- a/content/post/2022-11-27-handling-larger-than-memory-dataset-with-arrow-table/index.Rmd
+++ b/content/post/2022-11-27-handling-larger-than-memory-dataset-with-arrow-table/index.Rmd
@@ -7,6 +7,8 @@ categories: ["R", "Code-Oriented"]
 tags: ["duckdb", "arrow", "scrubcsv"]
 ---
 
+![](images/benchmark.png){width=100%}
+
 <details>
 
 <summary>Setup</summary>
