--- a/content/post/2022-11-27-handling-larger-than-memory-dataset-with-arrow-table/index.Rmd
+++ b/content/post/2022-11-27-handling-larger-than-memory-dataset-with-arrow-table/index.Rmd
@@ -233,4 +233,4 @@ p
 
 # Conclusion
 
-Based on this analysis, `{arrow}` offers a big jump in flexibility around the kind of analysis which can be conducted, seamlessly with the same work flow, from a small machine. The ease with which one line of code, `{duckdb}` significantly reduced query time, justifying for us a lot of the raving on Twitter. Possibly more excitement about `{arrow}` and the way it dovetails with everything RStudio has already created may warranted. We haven't shown here, but also saved the data as parquet, and ran queries against it in the `{duckdb}` CLI with `read_parquet()`, and got the sense that responses were even faster (despite whatever ingestion time was needed), but maybe that may be for a future post. We cannot express enough gratitude to RStudio, and to all the people who have developed `{arrow}` and `{duckdb}` at this breakneck speed
+Based on this analysis, `{arrow}` offers a big jump in flexibility around the kind of analysis which can be conducted, seamlessly with the same work flow, from a small machine. The ease with which one line of code (without fiddling with any parameters), `{duckdb}` significantly reduced query time, justifying for us a lot of the raving on Twitter. Possibly more excitement about `{arrow}` and the way it dovetails with everything RStudio has already created may warranted. We haven't shown here, but also saved the data as parquet, and ran queries against it in the `{duckdb}` CLI with `read_parquet()`, and got the sense that responses were even faster (despite whatever ingestion time was needed), but maybe that may be for a future post. We cannot express enough gratitude to RStudio, and to all the people who have developed `{arrow}` and `{duckdb}` at this breakneck speed
