--- a/content/post/2022-11-27-handling-larger-than-memory-dataset-with-arrow-table/index.Rmd
+++ b/content/post/2022-11-27-handling-larger-than-memory-dataset-with-arrow-table/index.Rmd
@@ -48,7 +48,7 @@ We usually try to give credit to commentators who have made our learning possibl
 
 # Loading an `{arrow}` Table
 
-First, we load the larger 30 million row clean data set, which has 28 columns with `{arrow}`'s `read_csv_arrow()`. In the previous post, we were using a 2015 iMac with 8G of RAM, and now, our new MacBook Air m1 with 16G of RAM. When we ran the same function on the older iMac taking the data instead as data.frame, the same data took almost 10 minutes to load, but on the new machine, it took about 1 minute (so the time savings are about 90% from the m1). We also tried to load on the m1 as a data.table with `fread()`, but gave up after about 15 minutes. Here, we will actually choose the option to take the input as an `{arrow}` table (setting as_data_frame = FALSE), which reduces  load time a little further to 45 seconds. As an `{arrow}` table, the 7G of data takes up only 283kB of memory to be accessed via `{dplyr}` in RStudio. In the context of this size of data and machine, `{data.table}` doesn't seem like a viable solution compared to `{arrow}`, either as a data.frame or an `{arrow}` table, much as we love it.
+First, we load the larger 30 million row clean data set, which has 28 columns with `{arrow}`'s `read_csv_arrow()`. In the previous post, we were using a 2015 iMac with 8G of RAM, and now, our new MacBook Air m1 with 16G of RAM. When we ran the same function on the older iMac taking the data instead as data.frame, the same data took almost 10 minutes to load, but on the new machine, it took about 1 minute (so the time savings are about 90% from the m1). We also tried to load on the m1 as a data.table with `fread()`, but gave up after about 15 minutes. Here, we will actually choose the option to take the input as an `{arrow}` table (setting as_data_frame = FALSE), which reduces  load time a little further to 45 seconds. As an `{arrow}` table, the 7G of data takes up only 283kB of memory to be accessed via `{dplyr}` in RStudio (instead of 725MB if loaded as a data.frame). In the context of this size of data and machine, `{data.table}` doesn't seem like a viable solution compared to `{arrow}`, either as a data.frame or an `{arrow}` table, much as we love it.
 
 ```{r 'cleaned-csv'}
 tic()
