--- a/content/post/2023-02-22-nyed-data-explorer-shows-15-years-of-charter-school-success/index.Rmd
+++ b/content/post/2023-02-22-nyed-data-explorer-shows-15-years-of-charter-school-success/index.Rmd
@@ -27,9 +27,9 @@ Schools record and report student attributes, but in many cases, it seems likely
 
 # Navigating the App
 
-The `{golem}` app (shown below) was built with the `{shinyWidgets}` package, which offers "conditional drop-down filtering" through its `selectizeGroup` module, for navigating multiple categories with high-cardinality. By reducing the subset of each filter with the other filters, this method helps to rapidly narrow down to desired groups with little or no latency. I discovered this by accident after trying a lot of things which didn't work nearly as well, and still feel that it may not be well known as it deserves to be (see discussion in [Introducing the Redwall IRS SOI Tax Dashboard](https://redwallanalytics.com/2021/08/06/introducing-the-redwall-irs-soi-tax-dashboard/)) discussed it in more detail.
+The `{golem}` app (shown below, please be patient if it takes a moment to load) was built with the `{shinyWidgets}` package, which offers "conditional drop-down filtering" through its `selectizeGroup` module, for navigating multiple categories with high-cardinality. By reducing the subset of each filter with the other filters, this method helps to rapidly narrow down to desired groups with little or no latency. I discovered this by accident after trying a lot of things which didn't work nearly as well, and still feel that it may not be well known as it deserves to be (see discussion in [Introducing the Redwall IRS SOI Tax Dashboard](https://redwallanalytics.com/2021/08/06/introducing-the-redwall-irs-soi-tax-dashboard/)) discussed it in more detail.
 
-<iframe height="900" width="100%" frameborder="no" src="https://luceyda.shinyapps.io/nyedapp"> </iframe>
+<iframe height="900" width="1000" frameborder="no" src="https://luceyda.shinyapps.io/nyedapp"> </iframe>
 
 
 In the title image of this post, the app is filtered for the Subgroup and Test of "All Students" and the "ELA", respectively. Using the ellipsis on the top left, try those filters, because the app initially shows all the subgroups and tests taken over the last 15 years, counting the same students in multiple groups. Once filtered, the population of public school students (Charter and DOE across all NYS counties) taking the test, should decline from 1.2 million to 900,000 over the period. When using the app, it is imperative to make sure that subgroups are selected which are mutually exclusive. For example, a "White" student may also be included in "Students with Disabilities", so choosing both of those subgroups would double count the total tested and possibly skew pass rates, while choosing S
